# StripLedState

./: README.md  mkdocs.yml  pyproject.toml  requirements.txt
    .github/workflows/: docs.yml
app/: cli.py
docs/: README.md  gen_ref_pages.py
docs/stylesheets/: extra.css
docs/user-guide/: basic-usage.md  cli.md
examples/: main.py
src/StripLedState/: __init__.py  addr_stripled_signalisation_non_bloquant_V2.py
src/mecamatesignal/audio/: microphone.py  speaker.py
src/mecamatesignal/emergencysignalisation/: emergency_signal.py
src/mecamatesignal/ledsignalisation/: addr_stripled_signalisation_non_bloquant.py  addr_stripled_signalisation_non_bloquant_V2.py
src/stripled-state/: __init__.py
src/stripled-state/ledsignalisation/: addr_stripled_signalisation.py  addr_stripled_signalisation_non_bloquant_V2.py
